tools/test/simple3.out
var2.rask:3:9: error: uninitialized variable 'a'
